<resources>
    <string name="app_name">TacticUrban</string>
    <string name="createOccount_createOccount">Create a new account</string>
    <string name="createAccount_instructions">Enter all the requested data to\ncreate your account in urban tactics</string>
    <string name="createAccount_fullName">Enter Full Name</string>
    <string name="createAccount_userName">Enter User Name</string>
    <string name="createAccount_eMail">Enter eMail</string>
    <string name="createAccount_password">Enter Password</string>
    <string name="createAccount_confirmPassword">Confirm Password</string>
    <array name="createAccount_rol">
        <item>Ciudadano</item>
        <item>Funcionario</item>
    </array>
    <string name="createAccount_direction">Click and Accept the location terms</string>
    <string name="createAccount_direction_terms">Get address</string>
    <string name="createAccount_birthdate">Click For Select Birthdate</string>
    <string name="createAccount_genderOption">Gender: </string>
    <string name="createAccount_genderOption_male">Male</string>
    <string name="createAccount_genderOption_female">Female</string>
    <string name="createAccount_terms">I Agree To The Therms and Conditions</string>
    <string name="createAccount_register">Register</string>
    <string name="createAccount_alrready">Already registered?</string>
    <string name="createAccount_signIn">Sing In</string>

    <string name="loginForm_loginContinue">Login to continue</string>
    <string name="loginForm_instructions">Enter your username and password to access urban tactics\nif you do not have an account, click to register </string>
    <string name="loginForm_userName">Enter User Name</string>
    <string name="loginForm_password">Enter Password</string>
    <string name="loginForm_singIn">Sign In</string>
    <string name="loginForm_register">Register</string>

    <string-array name="report_incident">
        <item>Problemas de seguridad vial</item>
        <item>Congestión del tráfico</item>
        <item>Conflictos entre usuarios</item>
        <item>Impacto en los negocios locales</item>
        <item>Daños a la infraestructura temporal</item>
        <item>Problemas de accesibilidad</item>
        <item>Impacto ambiental</item>
        <item>Problemas de mantenimiento</item>
    </string-array>

    <string-array name="select_rol">
        <item>admin</item>
        <item>alcaldia</item>
        <item>decisiones</item>
    </string-array>

    <string name="main_information">Welcome to UrbanTactics\na place for road safety for all citizens</string>
    <string name="main_signUp">SignUp</string>
    <string name="main_login">Login</string>
    <string name="title_activity_reportar_incidente_maps">ReportarIncidenteMaps</string>
    <string name="title_activity_reporte_alcaldia">ReporteAlcaldia</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>