<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingupAdmin">

    <ImageView
        android:id="@+id/createAccount_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo2" />



    <View
        android:id="@+id/linea1"
        android:layout_width="0dp"
        android:layout_height="2.2dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="@+id/textO"
        app:layout_constraintBottom_toBottomOf="@+id/textO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textO"


        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        />

    <View
        android:id="@+id/linea2"
        android:layout_width="0dp"
        android:layout_height="2.2dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="@+id/textO"
        app:layout_constraintBottom_toBottomOf="@+id/textO"
        app:layout_constraintStart_toEndOf="@+id/textO"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"

        />


    <TextView
        android:id="@+id/textO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O"
        android:textColor="#000000"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginForm_instructions"

        android:layout_margin="8dp"

        />

    <TextView
        android:id="@+id/loginForm_loginContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="Create Occount for Rol"
        android:textSize="22dp"
        android:textStyle="bold"

        android:layout_marginTop="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginForm_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:hint="@string/createAccount_instructions"

        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginForm_loginContinue" />

    <EditText
        android:id="@+id/createAccount_fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:hint="@string/createAccount_fullName"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/textO" />

    <EditText
        android:id="@+id/loginForm_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:hint="@string/createAccount_userName"

        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_fullName" />

    <EditText
        android:id="@+id/createAccount_eMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/createAccount_eMail"

        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/loginForm_userName" />

    <EditText
        android:id="@+id/loginForm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/createAccount_password"

        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_eMail" />

    <EditText
        android:id="@+id/createAccount_confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/createAccount_confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/loginForm_password" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_confirmPassword">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount_genderOption"
            />



        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount_genderOption_male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount_genderOption_female" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/createAccount_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/createAccount_terms"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_gender" />





    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/createAccount_birthdate"
        android:textSize="16dp"

        app:layout_constraintBottom_toBottomOf="@+id/editTextFecha"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toEndOf="@+id/editTextFecha"
        app:layout_constraintTop_toTopOf="@+id/editTextFecha" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getLocationButton"

        android:layout_marginTop="16dp"
        android:text="@string/createAccount_direction"

        android:textSize="16dp"


        app:layout_constraintBottom_toBottomOf="@+id/getLocationButton"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toEndOf="@+id/getLocationButton"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <Button
        android:id="@+id/getLocationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_marginTop="16dp"

        android:textColor="#000"
        android:textSize="16dp"


        android:backgroundTint="#4EE534"
        android:text="Obtener Dirección"
        app:layout_constraintEnd_toEndOf="@+id/linea1"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <Button
        android:id="@+id/createAccount_register"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:backgroundTint="#4EE534"

        android:layout_marginTop="16dp"
        android:text="@string/createAccount_register"
        android:textColor="#000"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/textRoles" />


    <ImageView
        android:id="@+id/editTextFecha"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:clickable="true"

        app:srcCompat="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_terms"/>

    <Spinner
        android:id="@+id/spinnerRol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"

        android:entries="@array/select_rol"

        app:layout_constraintBottom_toBottomOf="@+id/textRoles"
        app:layout_constraintEnd_toEndOf="@+id/linea2"
        app:layout_constraintStart_toEndOf="@+id/textRoles"
        app:layout_constraintTop_toTopOf="@+id/textRoles" />

    <TextView
        android:id="@+id/textRoles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:text="Select Rol: "
        android:textSize="16dp"

        app:layout_constraintStart_toStartOf="@+id/linea1"
        app:layout_constraintTop_toBottomOf="@+id/getLocationButton" />


</androidx.constraintlayout.widget.ConstraintLayout>